--- a/github-commits/src/app/app.component.scss
+++ b/github-commits/src/app/app.component.scss
@@ -27,6 +27,10 @@
 .result-item {
   margin-left: 20px;
   margin-right: 20px;
+  margin-top: 20px;
+  display: inline-block;
 }
 
-
+.btn, .repository-full-width{
+  margin-top: 10px;
+}
