--- a/github-commits/src/app/app.component.html
+++ b/github-commits/src/app/app.component.html
@@ -1,28 +1,64 @@
 <h1 fxLayoutAlign="center center" class="main-title">GitHub Commits Counter</h1>
 
 <div fxLayoutAlign="center center" class="container" fxLayout="column">
-    <div class="saved-repositories" fxFlex fxLayout="column">
-      <h2 fxLayoutAlign="center center">Repositories</h2>
-      <div fxLayout="column" fxLayoutAlign="center center">
+  <div class="authentication" fxFlex fxLayout="column">
+    <h2 fxLayoutAlign="center center">Authentication</h2>
+    <div fxLayout="column" fxLayoutAlign="center center">
+      <form
+        [formGroup]="addTokenFormGroup"
+        class="add-repo-form"
+        (ngSubmit)="onAuth()"
+      >
+        <mat-card-content fxLayout="column">
+          <mat-form-field class="repository-full-width">
+            <mat-label>Token</mat-label>
+            <input
+              matInput
+              placeholder="Token"
+              type="text"
+              formControlName="token"
+              required
+            />
+            <mat-hint>Token</mat-hint>
+            <mat-error>Token</mat-error>
+          </mat-form-field>
+        </mat-card-content>
         <button
-          mat-raised-button
-          *ngFor="let repository of repositories"
-          (click)="onDeleteRepo(repository)"
-          matTooltip="Delete"
-          matTooltipPosition="right"
-          class="item"
+          type="submit"
+          [disabled]="!addTokenFormGroup.valid"
+          mat-stroked-button
+          color="primary"
+          fxFlexFill
+          class="btn"
         >
-          <div class="owner-chips">{{ "Owner : " + repository.owner }}</div>
-          <span class="repository-chips">{{
-            "Repository : " + repository.repository
-          }}</span>
+          Add Token
         </button>
-      </div>
+      </form>
     </div>
+  </div>
+
+  <div class="saved-repositories" fxFlex fxLayout="column">
+    <h2 fxLayoutAlign="center center">Repositories</h2>
+    <div fxLayout="column" fxLayoutAlign="center center">
+      <button
+        mat-raised-button
+        *ngFor="let repository of repositories"
+        (click)="onDeleteRepo(repository)"
+        matTooltip="Delete"
+        matTooltipPosition="right"
+        class="item"
+      >
+        <div class="owner-chips">{{ "Owner : " + repository.owner }}</div>
+        <span class="repository-chips">{{
+          "Repository : " + repository.repository
+        }}</span>
+      </button>
+    </div>
+  </div>
 
   <div class="add-repo">
     <form
-      [formGroup]="formGroup"
+      [formGroup]="addRepoFormGroup"
       class="add-repo-form"
       (ngSubmit)="addRepository()"
     >
@@ -55,7 +91,7 @@
       </mat-card-content>
       <button
         type="submit"
-        [disabled]="!formGroup.valid"
+        [disabled]="!addRepoFormGroup.valid"
         mat-stroked-button
         color="primary"
         fxFlexFill
